--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -20,7 +20,7 @@ img {
     width: 250px; 
     height: auto;
 }
- 
+
 h1 {
      border: 2px groove orangered;
      padding-top: 20px;
@@ -37,4 +37,9 @@ h3 {
 
 h4 {
     padding-top: 30px;
+}
+
+img {
+    
+    
 }
