Made final changes for advanced users
Changed the font, added videos, used a picture as a link, removed about me picture.

--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -1,5 +1,6 @@
 body {
     background-color: chocolate;
+    font-family: Helvetica;
 }
 
 
@@ -43,3 +44,4 @@ h4 {
     width: 800px; 
     height: auto;   
 }
+
